--- a/laba_1/app/src/main/res/values/strings.xml
+++ b/laba_1/app/src/main/res/values/strings.xml
@@ -10,4 +10,5 @@
     <string name="laba">Лабораторная №1</string>
     <string name="save">save</string>
     <string name="result">results</string>
+    <string name="sign_out">sign out</string>
 </resources>
