--- a/laba_2/app/src/main/res/values/strings.xml
+++ b/laba_2/app/src/main/res/values/strings.xml
@@ -4,4 +4,7 @@
     <string name="explore">Explore</string>
     <string name="profile">Profile</string>
     <string name="products">Products</string>
+    <string name="group">951006</string>
+    <string name="name">Авсюкевич Максим Александрович</string>
+    <string name="laba">Лабораторная №2</string>
 </resources>
